small doc fixes

--- a/doc/slides.tex
+++ b/doc/slides.tex
@@ -22,7 +22,7 @@
 \title[Bonsai - un limbaj funcțional peste DLR]{Bonsai}
 \subtitle{Un limbaj funcțional peste DLR}
 \author{Eugen Anghel}
-\institute{Coordonator științific\\Profesor Doctor Gheorghe Grigoraș}
+\institute{Coordonator științific  \\Profesor Doctor Gheorghe Grigoraș}
 \date{\today}
 \begin{document}
 
@@ -54,7 +54,7 @@
     \item programare orientată-obiect bazată pe prototipuri
     \end{itemize}
   \item
-    Posibilitatea de a utiliza biblioteci .NET
+    Oferă posibilitatea de a utiliza biblioteci .NET
   \item
     Simplu
     \begin{itemize}
